DECAFParser.py
# Generated from DECAF.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class DECAFParser ( Parser ):

    grammarFileName = "DECAF.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'}'", "'['", "']'", 
                     "'struct'", "'int'", "'char'", "'boolean'", "'void'", 
                     "'(void)'", "'('", "','", "')'", "'bool'", "'='", "'(char)'", 
                     "'if'", "'else'", "'while'", "'return'", "'.'", "'-'", 
                     "'!'", "'*'", "'/'", "'%'", "'+'", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'!='", "'&&'", "'||'", "'true'", "'false'", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Id", "Num", "CharacterLiteral", "Digit", "Letter", 
                      "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDeclaration = 2
    RULE_structDeclaration = 3
    RULE_varType = 4
    RULE_methodDeclaration = 5
    RULE_parameter = 6
    RULE_parameterType = 7
    RULE_block = 8
    RULE_statement = 9
    RULE_ifStmt = 10
    RULE_elseStmt = 11
    RULE_whileStmt = 12
    RULE_returnStmt = 13
    RULE_location = 14
    RULE_expression = 15
    RULE_methodCall = 16
    RULE_arg = 17
    RULE_arith_higher_op = 18
    RULE_arith_op = 19
    RULE_rel_op = 20
    RULE_eq_op = 21
    RULE_cond_op = 22
    RULE_bool_literal = 23
    RULE_endline = 24
    RULE_closeKey = 25

    ruleNames =  [ "program", "declaration", "varDeclaration", "structDeclaration", 
                   "varType", "methodDeclaration", "parameter", "parameterType", 
                   "block", "statement", "ifStmt", "elseStmt", "whileStmt", 
                   "returnStmt", "location", "expression", "methodCall", 
                   "arg", "arith_higher_op", "arith_op", "rel_op", "eq_op", 
                   "cond_op", "bool_literal", "endline", "closeKey" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    Id=40
    Num=41
    CharacterLiteral=42
    Digit=43
    Letter=44
    WS=45
    COMMENT=46
    LINE_COMMENT=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DECAFParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(DECAFParser.DeclarationContext,i)


        def getRuleIndex(self):
            return DECAFParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DECAFParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(DECAFParser.T__0)
            self.state = 53
            self.match(DECAFParser.Id)
            self.state = 54
            self.match(DECAFParser.T__1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DECAFParser.T__5) | (1 << DECAFParser.T__6) | (1 << DECAFParser.T__7) | (1 << DECAFParser.T__8) | (1 << DECAFParser.T__9) | (1 << DECAFParser.T__14))) != 0):
                self.state = 55
                self.declaration()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(DECAFParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DECAFParser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StructDeclaraContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structDeclaration(self):
            return self.getTypedRuleContext(DECAFParser.StructDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclara" ):
                listener.enterStructDeclara(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclara" ):
                listener.exitStructDeclara(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDeclara" ):
                return visitor.visitStructDeclara(self)
            else:
                return visitor.visitChildren(self)


    class MethodDeclaContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def methodDeclaration(self):
            return self.getTypedRuleContext(DECAFParser.MethodDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDecla" ):
                listener.enterMethodDecla(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDecla" ):
                listener.exitMethodDecla(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDecla" ):
                return visitor.visitMethodDecla(self)
            else:
                return visitor.visitChildren(self)


    class VarDeclaContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varDeclaration(self):
            return self.getTypedRuleContext(DECAFParser.VarDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecla" ):
                listener.enterVarDecla(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecla" ):
                listener.exitVarDecla(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecla" ):
                return visitor.visitVarDecla(self)
            else:
                return visitor.visitChildren(self)



    def declaration(self):

        localctx = DECAFParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = DECAFParser.StructDeclaraContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.structDeclaration()
                pass

            elif la_ == 2:
                localctx = DECAFParser.VarDeclaContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.varDeclaration()
                pass

            elif la_ == 3:
                localctx = DECAFParser.MethodDeclaContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.methodDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DECAFParser.RULE_varDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ListaContext(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.VarDeclarationContext
            super().__init__(parser)
            self.vartype = None # VarTypeContext
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)
        def Num(self):
            return self.getToken(DECAFParser.Num, 0)
        def endline(self):
            return self.getTypedRuleContext(DECAFParser.EndlineContext,0)

        def varType(self):
            return self.getTypedRuleContext(DECAFParser.VarTypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista" ):
                listener.enterLista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista" ):
                listener.exitLista(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLista" ):
                return visitor.visitLista(self)
            else:
                return visitor.visitChildren(self)


    class NormalContext(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.VarDeclarationContext
            super().__init__(parser)
            self.vartype = None # VarTypeContext
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)
        def endline(self):
            return self.getTypedRuleContext(DECAFParser.EndlineContext,0)

        def varType(self):
            return self.getTypedRuleContext(DECAFParser.VarTypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNormal" ):
                listener.enterNormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNormal" ):
                listener.exitNormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNormal" ):
                return visitor.visitNormal(self)
            else:
                return visitor.visitChildren(self)



    def varDeclaration(self):

        localctx = DECAFParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclaration)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = DECAFParser.NormalContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                localctx.vartype = self.varType()
                self.state = 69
                self.match(DECAFParser.Id)
                self.state = 70
                self.endline()
                pass

            elif la_ == 2:
                localctx = DECAFParser.ListaContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                localctx.vartype = self.varType()
                self.state = 73
                self.match(DECAFParser.Id)
                self.state = 74
                self.match(DECAFParser.T__3)
                self.state = 75
                self.match(DECAFParser.Num)
                self.state = 76
                self.match(DECAFParser.T__4)
                self.state = 77
                self.endline()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StructDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DECAFParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(DECAFParser.VarDeclarationContext,i)


        def getRuleIndex(self):
            return DECAFParser.RULE_structDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclaration" ):
                listener.enterStructDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclaration" ):
                listener.exitStructDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDeclaration" ):
                return visitor.visitStructDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def structDeclaration(self):

        localctx = DECAFParser.StructDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(DECAFParser.T__5)
            self.state = 82
            self.match(DECAFParser.Id)
            self.state = 83
            self.match(DECAFParser.T__1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DECAFParser.T__5) | (1 << DECAFParser.T__6) | (1 << DECAFParser.T__7) | (1 << DECAFParser.T__8) | (1 << DECAFParser.T__9))) != 0):
                self.state = 84
                self.varDeclaration()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(DECAFParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)

        def structDeclaration(self):
            return self.getTypedRuleContext(DECAFParser.StructDeclarationContext,0)


        def getRuleIndex(self):
            return DECAFParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarType" ):
                return visitor.visitVarType(self)
            else:
                return visitor.visitChildren(self)




    def varType(self):

        localctx = DECAFParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varType)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(DECAFParser.T__6)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(DECAFParser.T__7)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.match(DECAFParser.T__8)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 95
                self.match(DECAFParser.T__5)
                self.state = 96
                self.match(DECAFParser.Id)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 97
                self.structDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 98
                self.match(DECAFParser.T__9)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DECAFParser.RULE_methodDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MetoIntWithParamContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.MethodDeclarationContext
            super().__init__(parser)
            self.metoIntWithParam = None # Token
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)
        def block(self):
            return self.getTypedRuleContext(DECAFParser.BlockContext,0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DECAFParser.ParameterContext)
            else:
                return self.getTypedRuleContext(DECAFParser.ParameterContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetoIntWithParam" ):
                listener.enterMetoIntWithParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetoIntWithParam" ):
                listener.exitMetoIntWithParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetoIntWithParam" ):
                return visitor.visitMetoIntWithParam(self)
            else:
                return visitor.visitChildren(self)


    class MetoIntContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.MethodDeclarationContext
            super().__init__(parser)
            self.metoInt = None # Token
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)
        def block(self):
            return self.getTypedRuleContext(DECAFParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetoInt" ):
                listener.enterMetoInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetoInt" ):
                listener.exitMetoInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetoInt" ):
                return visitor.visitMetoInt(self)
            else:
                return visitor.visitChildren(self)


    class MetoCharContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.MethodDeclarationContext
            super().__init__(parser)
            self.metoChar = None # Token
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)
        def block(self):
            return self.getTypedRuleContext(DECAFParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetoChar" ):
                listener.enterMetoChar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetoChar" ):
                listener.exitMetoChar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetoChar" ):
                return visitor.visitMetoChar(self)
            else:
                return visitor.visitChildren(self)


    class MetoCharWithParamContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.MethodDeclarationContext
            super().__init__(parser)
            self.metoCharWithParam = None # Token
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)
        def block(self):
            return self.getTypedRuleContext(DECAFParser.BlockContext,0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DECAFParser.ParameterContext)
            else:
                return self.getTypedRuleContext(DECAFParser.ParameterContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetoCharWithParam" ):
                listener.enterMetoCharWithParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetoCharWithParam" ):
                listener.exitMetoCharWithParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetoCharWithParam" ):
                return visitor.visitMetoCharWithParam(self)
            else:
                return visitor.visitChildren(self)


    class MetoVoidContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.MethodDeclarationContext
            super().__init__(parser)
            self.metoVoid = None # Token
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)
        def block(self):
            return self.getTypedRuleContext(DECAFParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetoVoid" ):
                listener.enterMetoVoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetoVoid" ):
                listener.exitMetoVoid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetoVoid" ):
                return visitor.visitMetoVoid(self)
            else:
                return visitor.visitChildren(self)


    class MetoVoidWithParamContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.MethodDeclarationContext
            super().__init__(parser)
            self.metoVoidWithParam = None # Token
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)
        def block(self):
            return self.getTypedRuleContext(DECAFParser.BlockContext,0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DECAFParser.ParameterContext)
            else:
                return self.getTypedRuleContext(DECAFParser.ParameterContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetoVoidWithParam" ):
                listener.enterMetoVoidWithParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetoVoidWithParam" ):
                listener.exitMetoVoidWithParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetoVoidWithParam" ):
                return visitor.visitMetoVoidWithParam(self)
            else:
                return visitor.visitChildren(self)


    class MetoBoolWithParamContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.MethodDeclarationContext
            super().__init__(parser)
            self.metoBoolWithParam = None # Token
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)
        def block(self):
            return self.getTypedRuleContext(DECAFParser.BlockContext,0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DECAFParser.ParameterContext)
            else:
                return self.getTypedRuleContext(DECAFParser.ParameterContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetoBoolWithParam" ):
                listener.enterMetoBoolWithParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetoBoolWithParam" ):
                listener.exitMetoBoolWithParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetoBoolWithParam" ):
                return visitor.visitMetoBoolWithParam(self)
            else:
                return visitor.visitChildren(self)


    class MetoBoolContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DECAFParser.MethodDeclarationContext
            super().__init__(parser)
            self.metoBool = None # Token
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DECAFParser.Id, 0)
        def block(self):
            return self.getTypedRuleContext(DECAFParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetoBool" ):
                listener.enterMetoBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetoBool" ):
                listener.exitMetoBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetoBool" ):
                return visitor.visitMetoBool(self)
            else:
                return visitor.visitChildren(self)



    def methodDeclaration(self):

        localctx = DECAFParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                localctx = DECAFParser.MetoIntContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                localctx.metoInt = self.match(DECAFParser.T__6)
                self.state = 102
                self.match(DECAFParser.Id)
                self.state = 103
                self.match(DECAFParser.T__10)
                self.state = 104
                self.block()
                pass

            elif la_ == 2:
                localctx = DECAFParser.MetoIntWithParamContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                localctx.metoIntWithParam = self.match(DECAFParser.T__6)
                self.state = 106
                self.match(DECAFParser.Id)
                self.state = 107
                self.match(DECAFParser.T__11)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DECAFParser.T__6) | (1 << DECAFParser.T__7) | (1 << DECAFParser.T__8))) != 0):
                    self.state = 108
                    self.parameter()
                    self.state = 113
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==DECAFParser.T__12:
                        self.state = 109
                        self.match(DECAFParser.T__12)
                        self.state = 110
                        self.parameter()
                        self.state = 115
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 118
                self.match(DECAFParser.T__13)
                self.state = 119
                self.block()
                pass

            elif la_ == 3:
                localctx = DECAFParser.MetoCharContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                localctx.metoChar = self.match(DECAFParser.T__7)
                self.state = 121
                self.match(DECAFParser.Id)
                self.state = 122
                self.match(DECAFParser.T__10)
                self.state = 123
                self.block()
                pass

            elif la_ == 4:
                localctx = DECAFParser.MetoCharWithParamContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                localctx.metoCharWithParam = self.match(DECAFParser.T__7)
                self.state = 125
                self.match(DECAFParser.Id)
                self.state = 126
                self.match(DECAFParser.T__11)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DECAFParser.T__6) | (1 << DECAFParser.T__7) | (1 << DECAFParser.T__8))) != 0):
                    self.state = 127
                    self.parameter()
                    self.state = 132
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==DECAFParser.T__12:
                        self.state = 128
                        self.match(DECAFParser.T__12)
                        self.state = 129
                        self.parameter()
                        self.state = 134
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 137
                self.match(DECAFParser.T__13)
                self.state = 138
                self.block()
                pass

            elif la_ == 5:
                localctx = DECAFParser.MetoBoolContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                localctx.metoBool = self.match(DECAFParser.T__14)
                self.state = 140
                self.match(DECAFParser.Id)
                self.state = 141
                self.match(DECAFParser.T__10)
                self.state = 142
                self.block()
                pass
